# robotframework-lsp

./: .gitignore  .gitmodules  .project  .pydevproject  .vscodeignore  COPYRIGHT  LICENSE  README.md  ThirdPartyNotices.txt  completion_context.py  config.py  dev.py  environment.yml  errors.py  filesystem_section_completions.py  language-configuration.json  package.json  postBuild  protocols.py  pyproject.toml  requisites.txt  robot_constants.py  robot_generated_lsp_constants.py  server.py  settings.py  setup.py  variable_types.py  variables_from_variables_file.py
robocorp-code/: .gitignore  .project  .vscodeignore  README.md  dev.py  dev_requirements.txt  package-lock.json  package.json  pyproject.toml
robocorp-code/codegen/: codegen_package.py  commands.py  convert.py  settings.py  views.py
robocorp-code/docs/: changelog.md  develop.md  release.md
robocorp-code/src/: setup.py
robocorp-code/src/robocorp_code/: __dev__main.py  __init__.py  __main__.py  __playwright__main.py  _language_server_feedback.py  _language_server_login.py  _language_server_playwright.py  _language_server_pre_run_scripts.py  _language_server_profile.py  _language_server_vault.py  _lint.py  _script_helpers.py  commands.py  compute_launch.py  find_robot_yaml.py  holetree_manager.py  hover.py  locators_db.py  options.py  path_operations.py  playwright.py  protocols.py  rcc.py  rcc_space_info.py  robocorp_config.py  robocorp_language_server.py  settings.py  subprocess_check_output_interactive.py
robocorp-code/src/robocorp_code/inspector/: README.md  client.py  common.py  inspector__main__.py  inspector_api.py  inspector_language_server.py  inspector_server_manager.py
robocorp-code/src/robocorp_code/inspector/image/: _bridge.py  _image_inspector.py  _snipping_tool.py
robocorp-code/src/robocorp_code/inspector/java/: highlighter.py  java_inspector.py  picker.py
robocorp-code/src/robocorp_code/inspector/web/: __init__.py  _web_inspector.py
robocorp-code/src/robocorp_code/inspector/windows/: windows_inspector.py
robocorp-code/src/robocorp_code/locators/: locator_image.py  locator_protocols.py  locator_webdriver.py
robocorp-code/src/robocorp_code/locators/resources/: picker.js  simmer.js  style.js
robocorp-code/src/robocorp_code/locators/server/: locator__main__.py  locator_client.py  (+2 more)
robocorp-code/src/robocorp_code/playwright/: __playwright__main.py  playwright_template.html
robocorp-code/src/robocorp_code/plugins/: resolve_interpreter.py
robocorp-code/src/robocorp_code/robo/: collect_actions.py  launch_actions.py  launch_code_lens.py  lint_action.py  lint_in_target_env.py
robocorp-code/src/robocorp_code_debug_adapter/: __main__.py  constants.py  debug_adapter_comm.py  launch_process.py
robocorp-code/tests/: conftest.py  pytest.ini  test_requirements.txt
robocorp-code/tests/robocorp_code_debug_adapter_tests/: fixtures.py  test_debug_adapter.py
robocorp-code/tests/robocorp_code_tests/: __init__.py  fixtures.py  protocols.py  robocode_language_server_client.py  test_check_output_interactive.py  test_cli.py  test_command_dispatch.py  test_compute_launch.py  test_language_server_directly.py  test_locators.py  test_pre_run_scripts.py  test_prebuilt_environments.py  test_rcc.py  test_resolve_interpreter.py  test_vscode_integration.py  test_work_items.py
robocorp-code/tests/robocorp_code_tests/inspector/: test_inspector_api.py  test_web_inspector.py  test_windows_inspector.py
robocorp-code/tests/robocorp_code_tests/robo/: test_list_actions.py  test_tasks_code_lenses.py
robocorp-code/tests/robocorp_code_tests/test_vscode_integration/: sample_profile.yml  test_cloud_list_workspaces_basic.yml  test_cloud_list_workspaces_errors_single_ws_not_available.yml  test_hover_conda_yaml_conda_forge_numpy_versions.yml  test_hover_conda_yaml_conda_forge_python_versions.yml  test_hover_conda_yaml_conda_forge_versions.yml  test_hover_conda_yaml_pypi_versions.yml  test_hover_conda_yaml_versions.yml  test_hover_conda_yaml_versions_no_releases.yml  test_hover_package_yaml_conda_forge_versions.yml  test_lint_python_action.yml  test_lint_robot_integration.yml  test_lint_robot_integration_deps.yml  test_obtain_locator_info.yml
robocorp-code/tests/robocorp_code_tests/test_work_items/: test_list_work_items-1-no-increment.yml  test_list_work_items-2.yml  test_list_work_items-interactive-1.yml  test_list_work_items-interactive-2.yml  test_list_work_items-interactive-3.yml  test_list_work_items.yml
robocorp-code/vscode-client/: .vscodeignore  tsconfig.json
robocorp-code/vscode-client/src/: actionServer.ts  activities.ts  ask.ts  channel.ts  clear.ts  common.ts  conversion.ts  conversionView.ts  convertion.ts  debugger.ts  extension.ts  extensionCreateEnv.ts  files.ts  inspector.ts  locators.ts  mutex.ts  playwright.ts  profiles.ts  progress.ts  protocols.ts  pythonExtIntegration.ts  rcc.ts  rccTerminal.ts  requestLight.ts  robocorpCommands.ts  robocorpSettings.ts  robocorpViews.ts  slugify.ts  submitIssue.ts  subprocess.ts  time.ts  vault.ts  views.ts  viewsCommon.ts  viewsLocators.ts  viewsResources.ts  viewsRobocorp.ts  viewsRobotContent.ts  viewsRobotSelection.ts  viewsRobotSelectionTreeBase.ts  (+2 more)
robocorp-code/vscode-client/src/inspector/: inspectorView.ts  protocols.ts  types.ts  utils.ts
robocorp-code/vscode-client/src/output/: outView.ts  outViewRunIntegration.ts
robocorp-code/vscode-client/src/robo/: README.md  actionPackage.ts  linkProvider.ts  runRobocorpTasks.ts
robocorp-code/vscode-client/src/tests/: runTests.ts
robocorp-code/vscode-client/templates/: converter.html  inspector-bk.html  inspector.html  output.html  submit_issue.html
(+1831 files in other folders)
